Fix product stretched images

--- a/smallslive/static/sass/components/_store-base.scss
+++ b/smallslive/static/sass/components/_store-base.scss
@@ -2600,9 +2600,9 @@ img.defineImageRatio {
   }
 }
 .store-single__item__images {
-  width: 320px;
-  height: 320px;
-  max-width: 320px;
+  width: auto;
+  height: auto;
+  max-width: 400px;
   @media (max-width: $screen-md) {
     width: auto;
   }
